--- a/web/styles/homepage.css
+++ b/web/styles/homepage.css
@@ -39,6 +39,14 @@ path {
 
 }
 
+.careers .image {
+    width: 1000px;
+}
+
+.careers-table {
+    background-color: rgba(255,255,255,0.4) !important;
+    box-shadow: 1px 2px 4px 2px rgba(0,0,0,0.2), 4px 2px 8px 2px rgba(0,0,0,0.2)
+}
 .footer {
     height: 80px;
     color: #333333;
@@ -59,3 +67,5 @@ path {
     background-color: rgba(255,255,255, 0.6);
     box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.2);
 }
+
+
