--- a/web/styles/homepage.css
+++ b/web/styles/homepage.css
@@ -23,12 +23,6 @@ body {
     border: 1px solid darkblue;
 }
 
-path {
-    stroke-dasharray: 1000;
-    stroke-dashoffset: 1000;
-    transition-duration: 1s;
-}
-
 .banner3 {
     transform: translateY(60px);
 }
@@ -39,6 +33,15 @@ path {
 
 }
 
+.careers .image {
+    width: 800px;
+    margin-right: 20px;
+}
+
+.careers-table {
+    background-color: rgba(255,255,255,0.4) !important;
+    box-shadow: 1px 2px 4px 2px rgba(0,0,0,0.2), 4px 2px 8px 2px rgba(0,0,0,0.2)
+}
 .footer {
     height: 80px;
     color: #333333;
@@ -59,3 +62,5 @@ path {
     background-color: rgba(255,255,255, 0.6);
     box-shadow: 1px 2px 4px 2px rgba(0, 0, 0, 0.2);
 }
+
+
